Fix incorrect spacing on search results

--- a/web-client/src/app/search/search.component.scss
+++ b/web-client/src/app/search/search.component.scss
@@ -26,10 +26,16 @@
   border: none;
   border-top: 1px solid $color-light;
   background: transparent;
+  margin-left: 0;
   padding: 8px 0;
+  transition: background-color 200ms;
 
   &:first-child {
     border-top: none;
+  }
+
+  &:not(:disabled):hover {
+    background-color: $color-light;
   }
 }
 
